--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,11 @@
 body
 {
-    width: 900px; /*Largeur du site*/
-    width: 100%; /* On pourrait aussi prendre 100% de la largeur */
-    margin: auto; /* pour centrer le site en largeur */
+    width: 900px;
+    width: 100%;
+    margin: auto;
 }
-img
+img {
+
+    background: url("../Medias/enfant.jpeg") no-repeat center;
+    margin:auto;
+}
