--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,6 +1,6 @@
 body
 {
     width: 900px;
-    background: url("../Medias/enfant.jpeg") no-repeat center;
-    margin: auto;
+    background: url("Medias/enfant.jpeg") no-repeat center;
+
 }
