--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,6 +1,6 @@
 body
 {
     width: 900px;
-    background: url("Medias/komlan.jpg") no-repeat center;
+    background: url("../Medias/komlan.jpg") no-repeat center;
 
 }
