--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -2,7 +2,6 @@ body
 {
     width: 900px;
     background: url("../Medias/komlan.jpg") no-repeat center;
-    background-color: red;
-
+    background-color: blue;
 }
 
