--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -5,6 +5,13 @@ body
     background-color: blue;
 }
 
+
+h1, h2 {
+    color: blue;
+}
 h1{
-    font-size:500px;
+    font-size:36px;
+}
+h2{
+    24px;
 }
