--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,9 +1,9 @@
 body
 {
     width: 900px;
-    background: url("../Medias/comique_info.jpg.jpg") no-repeat center;
+    background: url("./Medias/comique_info.jpg.jpg") no-repeat center;
     margin: auto;
-    background-color: bisque;
+
 }
 
 
