--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,7 @@
 body
 {
     width: 900px;
-    background: url("JeMePresente/Medias/comique_info.jpg") no-repeat center;
+    background: url("../Medias/comique_info.jpg") no-repeat center;
     margin: auto;
 
 }
