--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -2,7 +2,8 @@ body
 {
     width: 900px;
     background: url("../Medias/komlan5.JPG") no-repeat center;
-    margin: auto;
+
+    margin: fill;
 
 }
 
