--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,7 @@
 body
 {
     width: 900px;
-    background: url("../Medias/komlan5.JPG") no-repeat center;
+    background: url("../Medias/KomlanPlage.jpg.") no-repeat center;
 
     margin: fill;
 
