--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,9 +1,9 @@
 body
 {
     width: 900px;
-    background: url("../Medias/KomlanPlage.jpg.") no-repeat center;
+    background: url("../Medias/KomlanPlage.jpg.");
 
-    margin: fill;
+    margin: auto;
 
 }
 
