--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,7 @@
 body
 {
     width: 900px;
-    background: url("../Medias/KomlanPlage.jpg.");
+    background-image: url("../Medias/KomlanPlage.jpg.");
 
     margin: auto;
 
