--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,7 @@
 body
 {
     width: 900px;
-    background-image: url("../Medias/KomlanPlage.jpg.") no-repeat center;
+    background-image: url("./Medias/KomlanPlage.jpg.") no-repeat center;
     margin: auto;
 
 }
