--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -3,6 +3,7 @@ body
     width: 900px;
     background-image: url("../medias/diplome.jpg");
     margin: auto;
+    background-color: bisque;
 }
 
 
