--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -3,7 +3,7 @@ body
     width: 900px;
     background-image: url("../Medias/komlan4.jpg");
     margin: auto;
-    background-color: beige;
+    background-color: blueviolet;
 }
 
 
