--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,8 @@
 body
 {
-    width: 900px;
+    width: 960px;
     background-image: url("../Medias/komlan4.jpg");
+    height: 960px;
     margin: auto;
     background-color: blueviolet;
 }
