--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -4,7 +4,7 @@ body
     background-image: url("../Medias/komlan4.jpg");
     height: 960px;
     margin: auto;
-    background-color: blueviolet;
+    background-color: beige;
 }
 
 
