--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,7 @@
 body
 {
     width: 960px;
-    background-image: url("../Medias/komlan4.jpg");
+    background-image: url("../Medias/komlan4.jpg") no-repeat center;
     height: 960px;
     margin: auto;
     background-color: beige;
