--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,9 @@
 body
 {
     width: 900px;
-    background-image: url("../Medias/komlan4.jpg");
+    background-image: url("../Medias/Komlan_Quebec.png");
+
+
     margin: auto;
     background-color: beige;
 }
