--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -1,7 +1,7 @@
 body
 {
     width: 900px;
-    background-image: url("../Medias/Albert_Anniversaire_Mario.jpg");
+    background-image: url("../Medias/Albert_Anniversaire_Mario.jpg") no-repeat center;
     margin: auto;
     background-color: beige;
 }
