--- a/JeMePresente/CSS/style.css
+++ b/JeMePresente/CSS/style.css
@@ -6,4 +6,45 @@ body
     background-color: beige;
 }
 
+h1{
+    font-size: 36px;
+}
+h2{
+    font-size: 24px;
+}
+h1, h2{
+    color: red;
+    text-align: center;
+}
+p {
+    font-size: 14px;
+    text-align: justify;
+}
+a {
+    color: deepskyblue;
+}
+a:visited {
+    color: blue;
+}
+a:hover {
+    text-decoration: underline;
+}
+img {
+    width: 300px;
+    border-radius: 50px;
+}
+img:hover {
+    box-shadow:10px 10px 5px 1px black;
+}
+table, th, td {
+    border: 5px solid black;
+}
+th {
+    color: blueviolet;
+    font-size: large;
+}
+td {
+    color: mediumslateblue;
+    font-size: medium;
+
 
