--- a/JeMePresente/css/style.css
+++ b/JeMePresente/css/style.css
@@ -22,10 +22,8 @@ h1, h2{
     color: red;
     text-align: center;
 }
-p {
-    font-size: 4rem;
-    text-align: justify;
-    font-family: maPolice;
+p{
+    50px;
 }
 a {
     color: #87CEFA;
