--- a/HanSolo/css/style.css
+++ b/HanSolo/css/style.css
@@ -51,7 +51,9 @@ img{
     color: #FFFF00;
     text-align: center;
 }
-
+a{
+    color: white;
+}
 a:hover {
     text-decoration: underline;
     color: white;
