--- a/Examen1 /Examen1/css/style.css
+++ b/Examen1 /Examen1/css/style.css
@@ -3,11 +3,11 @@
 /*Le 2020-05-06 */
 @font-face {
     font-family: maPolice;
-    src: url("../Examen1/font/jagwi.ttf");
+    src: url("../font/jagwi.ttf");
 }
 body{
     width: 1000px;
-    background-image: url("../Examen1/img/fondecran.jpg");
+    background-image: url("../img/fondecran.jpg");
     background-repeat: no-repeat;
     background-color: black;
     margin:auto;
