--- a/Examen2/css/style.css
+++ b/Examen2/css/style.css
@@ -45,10 +45,8 @@ body {
     background-size: cover;
     margin: 0;
     width: 100%;
+    background-position: center;
 }
-
-
-
 
 #NousJoindre{
     font-family: maPolice;
