--- a/Examen2/css/style.css
+++ b/Examen2/css/style.css
@@ -1,7 +1,12 @@
 /* style.css */
 /* Par Komlan Albert Gblokpor-Koffi*/
 /*Le 2020-06-03 */
-
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
+}
 body {
    background-color: #0b0b0b;
 }
@@ -87,7 +92,7 @@ font-family: maPolice;
 }
 .centrerTitre{
     margin: 0 auto;
-    width:300px;
+    width:18.75rem;
 }
  p{
      text-align: left;
@@ -117,7 +122,7 @@ img{
 }
 .fondvert {
     background-color: green;
-    height: 100px;
+
 }
 .fondJaune{
     background-color: yellow;
