--- a/Examen2/css/style.css
+++ b/Examen2/css/style.css
@@ -42,7 +42,12 @@ body {
     color:#6c6c6c;
     font-weight:bold;
 }
-
+#fontColorjeux{
+    color:#6c6c6c;
+}
+#fontColorLivres{
+    color:#6c6c6c;
+}
 #banniere {
     padding: 27rem;
     background-image: url("../img/witcherBanniere.jpg");
