--- a/Examen2/css/style.css
+++ b/Examen2/css/style.css
@@ -1,12 +1,7 @@
 /* style.css */
 /* Par Komlan Albert Gblokpor-Koffi*/
-/*Le 2020-06-03 */
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    [class*="col-"] {
-        width: 100%;
-    }
-}
+/*Le 2020-06-07 */
+
 body {
    background-color: #0b0b0b;
 }
@@ -62,24 +57,31 @@ body {
     width:18.75rem;
     text-align: center;
 }
+
+
 #witcher1{
-    padding-right:3rem;
-    padding-left:3rem;
-    /* margin-top:2rem;*/
+    padding-right:4rem;
+    padding-left:4rem;
+    margin-top:4rem;
 }
 #witcher2 {
-    padding-right:3rem;
-    padding-left: 3rem;
+    padding-right:4rem;
+    padding-left: 4rem;
+    margin-top:4rem;
 
 }
-#witcher3{
-    padding-right:3em;
-    padding-left:3rem;
-    /* margin-top:2rem;*/
+
+#witcher3 {
+    padding-right: 4em;
+    padding-left: 4rem;
+    margin-top: 4rem;
 }
+
+
 #witcherLivre1{
     padding-right:2em;
     padding-left:2rem;
+    margin-top:2rem;
 }
 #witcherLivre2{
     padding-right:2em;
