--- a/Examen2/css/style.css
+++ b/Examen2/css/style.css
@@ -82,7 +82,7 @@ body {
 
 
 #witcherLivre1{
-    padding-right: 1em;
+    padding-right: 0.375rem;
     padding-top: 0rem;
     padding-bottom: 2rem;
     padding-left: 2rem;
@@ -95,40 +95,37 @@ body {
     margin-top:2rem;*/
 }
 #witcherLivre2{
-    padding-right: 2em;
-    padding-left: 0.5rem;
+    padding-right: 0.375rem;
+    padding-left: 1.5rem;
     /*
     padding-right:2em;
     padding-left:2rem;
      */
 }
 #witcherLivre3{
-    padding-right: 1em;
+    padding-right: 1rem;
     padding-left:2rem;
 }
 #witcherLivre4{
-    padding-right: 0em;
+    padding-right: 0.375rem;
     padding-left: 1rem;
 }
 #witcherLivre5{
-    padding-right: 2em;
+    padding-right: 2rem;
     padding-left: 2rem;
-    padding-top: 0REM;
-    /*
-    padding-right:2em;
-    padding-left:2rem;
-     */
+    padding-top: 0rem;
+
 }
 #witcherLivre6{
-    padding-right:2em;
+    padding-right:2rem;
     padding-left:2rem;
 }
 #witcherLivre7{
-    padding-right:2em;
+    padding-right:2rem;
     padding-left:2rem;
 }
 #witcherLivre8{
-    padding-right:2em;
+    padding-right:2rem;
     padding-left:2rem;
 }
 
