--- a/ExerciceMenus/img/style.css
+++ b/ExerciceMenus/img/style.css
@@ -35,7 +35,7 @@ img{
 }
 #banniere{
     padding: 20rem;
-    background-image: url("slie_jubile.jpg");
+    background-image: url("VieuxQuebec.JPG");
     background-repeat: no-repeat;
     background-size:cover;
 }
