--- a/DioceseKpalime/css/style.css
+++ b/DioceseKpalime/css/style.css
@@ -35,7 +35,7 @@ img{
 }
 #banniere{
     padding: 20rem;
-    background-image: url("VieuxQuebec.JPG");
+    background-image: url("../img/VieuxQuebec.JPG");
     background-repeat: no-repeat;
     background-size:cover;
 }
@@ -43,7 +43,14 @@ img{
     background-color: #f57a17;
     padding: 4rem;
 }
+#partie4 {
+    background-color: #34ce57;
+    padding: 4rem;
+}
 #separation2{
+    border-color: white;
+}
+#separation3{
     border-color: white;
 }
 #atYourService{
