--- a/DioceseKpalime/css/style.css
+++ b/DioceseKpalime/css/style.css
@@ -1,10 +1,8 @@
 
 .parallax{
     /* L’image du Parallax */
-    background-image: url("imgparallax.jpg");
+    background-image: url("../img/kpalime4.jpg");
 }
-
-
 
 
 r{
@@ -51,7 +49,7 @@ img{
 }
 #banniere{
     padding: 20rem;
-    background-image: url("../img/VieuxQuebec.JPG");
+    background-image: url("../img/Banniere.jpg");
     background-repeat: no-repeat;
     background-size:cover;
 }
