--- a/DioceseKpalime/css/style.css
+++ b/DioceseKpalime/css/style.css
@@ -8,6 +8,15 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.parallax2{
+    /* L’image du Parallax*/
+    background-image: url("../img/seminariste.jpg");
+    min-height: 500px;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 r{
     margin-bottom:30px;
@@ -17,7 +26,7 @@ r{
     border-color: #f05f40;
 }
 h1{
-    color: white;
+    color: forestgreen;
 }
 h2{
     color: white;
@@ -65,9 +74,18 @@ img{
     background-color: #34ce57;
     padding: 4rem;
 }
-partie5{
+.partie5{
     background-color: #9fcdff;
-    padding: 4rem;
+    padding: 6rem;
+}
+.partie6{
+    padding: 10rem;
+    background-color: #9fcdff;
+}
+
+.piedpage{
+    padding: 5rem;
+    background-color: #9fcdff;
 }
 
 
@@ -79,6 +97,18 @@ partie5{
 }
 #atYourService{
     padding-top: 2rem;
+}
+
+bg::after {
+    content: "";
+    background-image: url("../img/VieuxQuebec.JPG");
+    opacity: 0.5;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
 }
 
 .fondRouge{
