--- a/DioceseKpalime/css/style.css
+++ b/DioceseKpalime/css/style.css
@@ -42,8 +42,6 @@ i{
     background-color: #e6e8f1;
 }
 
-
-
 img{
     width: 100%;
 }
@@ -65,6 +63,12 @@ img{
     background-image: url("../img/Banniere.jpg");
     background-repeat: no-repeat;
     background-size:cover;
+}
+#SectionEvenement{
+
+}
+#SectionActualite{
+    background-color: #b2e5bd;
 }
 #partie2{
     background-color: #f57a17;
@@ -115,29 +119,4 @@ bg::after {
     right: 0;
     position: absolute;
     z-index: -1;
-}
-
-.fondRouge{
-    background-color: red;
-    height: 100px;
-}
-.fondBleu{
-    background-color: blue;
-    height: 100px;
-
-}
-
-.fondVert{
-    background-color: #87ff5d;
-    height: 100px;
-}
-.fondJaune{
-    background-color: yellow;
-    height: 100px;
-
-}
-.fondBlanc{
-    background-color: white;
-    height: 100px;
-
 }
