--- a/DioceseKpalime/css/style.css
+++ b/DioceseKpalime/css/style.css
@@ -18,13 +18,6 @@
     background-size: cover;
 }
 
-r{
-    margin-bottom:30px;
-    margin-top:30px;
-    max-width: 50px;
-    border-width: 3px;
-    border-color: #f05f40;
-}
 h1{
     color: #f11555;
 }
@@ -64,8 +57,8 @@ img{
     background-repeat: no-repeat;
     background-size:cover;
 }
-#SectionEvenement{
-
+img:hover {
+    box-shadow:20px 20px 5px 1px #7aa780;
 }
 #SectionActualite{
     background-color: #b2e5bd;
@@ -108,7 +101,6 @@ img{
     padding-top: 2rem;
 }
 
-
 bg::after {
     content: "";
     background-image: url("../img/VieuxQuebec.JPG");
@@ -119,4 +111,30 @@ bg::after {
     right: 0;
     position: absolute;
     z-index: -1;
+}
+
+/* tablettes */
+@media screen and (min-width: 481px) and (max-width: 1199px){
+
+    #partie2{
+        background-image: url("../img/kpalime3.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        padding-bottom:20rem;
+        padding-top: 20rem;
+        position: relative;
+    }
+}
+/* Cellulaires M*/
+@media screen and (max-width: 480px){
+    #partie2{
+        background-image: url("../img/kpalime2.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+        padding-bottom: 20rem;
+        padding-top: 20rem;
+        position: relative;
+    }
 }
