--- a/DioceseKpalime/css/style.css
+++ b/DioceseKpalime/css/style.css
@@ -77,6 +77,12 @@ img:hover {
     padding: 7rem;
     background-color: #b2e5bd;
 }
+#Messenger{
+    background-color: #9fcdff;
+    padding: 6rem;
+}
+
+
 
 #consultation{
     padding: 5rem;
