--- a/DioceseKpalime/css/style.css
+++ b/DioceseKpalime/css/style.css
@@ -21,6 +21,40 @@
     background-size: cover;
 }
 
+.fondRouge{
+    background-color: red;
+    height: 100px;
+}
+.fondBleu{
+    background-color: blue;
+    height: 100px;
+
+}
+
+.fondVert{
+    background-color: #87ff5d;
+    height: 100px;
+}
+.fondJaune{
+    background-color: yellow;
+    height: 100px;
+
+}
+.fondBlanc{
+    background-color: white;
+    height: 100px;
+
+}
+/* Sous menu */
+.sousmenu{
+    display: none;
+    box-shadow: 0px 1px 2px #ccc;
+}
+nav > ul li:hover .sousmenu{
+    display: block;
+}
+
+/* fin Sous menu */
 h1{
     color: #f11555;
 }
