--- a/ProjetFinal_KomlanGblokpor-Koffi/css/style2.css
+++ b/ProjetFinal_KomlanGblokpor-Koffi/css/style2.css
@@ -1,51 +1,42 @@
-body {
-    background:#1d1d1d;
-    overflow: hidden;
-    text-align:center;
 
-
+@import url(https://fonts.googleapis.com/css?family=Istok+Web);
+@keyframes slidy {
+    0% { left: 0%; }
+    20% { left: 0%; }
+    25% { left: -100%; }
+    45% { left: -100%; }
+    50% { left: -200%; }
+    70% { left: -200%; }
+    75% { left: -300%; }
+    95% { left: -300%; }
+    100% { left: -400%; }
 }
-
-body,
-html {
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+* {
+    box-sizing: border-box;
 }
-.container{
-    position:absolute;
-
-    width:80%;
-    height:80%;
-
-
+body, figure {
+    margin: 0; background: #101010;
+    font-family: Istok Web, sans-serif;
+    font-weight: 100;
 }
-text{
-    text-anchor:middle;
-    font-family:"brandon-grotesque", Helvetica Neue, Arial,sans-serif;
-    font-weight:700;
-    font-size:42px;
-    letter-spacing:-1px;
+div#captioned-gallery {
+    width: 100%; overflow: hidden;
 }
-svg{
-
-
-    width:80%;
-    height:80%;
-    visibility:hidden;
-    overflow:visible;
-    opacity:1;
-
-
+figure.slider {
+    position: relative; width: 500%;
+    font-size: 0; animation: 30s slidy infinite;
 }
-
-.maskText3{
-    opacity:0
+figure.slider figure {
+    width: 20%; height: auto;
+    display: inline-block;  position: inherit;
 }
-
-
-
+figure.slider img { width: 100%; height: auto; }
+figure.slider figure figcaption {
+    position: absolute; bottom: 0;
+    background: rgba(0,0,0,0.4);
+    color: #fff; width: 100%;
+    font-size: 2rem; padding: .6rem;
+}
 
 
 
