--- a/ProjetFinSession/css/style.css
+++ b/ProjetFinSession/css/style.css
@@ -218,12 +218,19 @@ img:hover {
     background-color: #9fcdff;
     padding: 6rem;
 }
-
+#don{
+color: white;
+   text-align: center;
+}
 #consultation{
     padding: 5rem;
     background-color: green;
 }
+#partieDon{
+    padding: 5rem;
+    background-color: green
 
+}
 #separation2{
     border-color: white;
 }
@@ -271,267 +278,440 @@ bg::after {
     }
 }
 
-CSSResult
-@import url(https://fonts.googleapis.com/css?family=Istok+Web);
-@keyframes slidy {
-    0% { left: 0%; }
-    20% { left: 0%; }
-    25% { left: -100%; }
-    45% { left: -100%; }
-    50% { left: -200%; }
-    70% { left: -200%; }
-    75% { left: -300%; }
-    95% { left: -300%; }
-    100% { left: -400%; }
-}
-* {
-    box-sizing: border-box;
-}
-body, figure {
-    margin: 0; background: white;
-    font-family: Istok Web, sans-serif;
-    font-weight: 100;
-}
-div#captioned-gallery {
-    width: 100%; overflow: hidden;
-}
-figure.slider {
-    position: relative; width: 500%;
-    font-size: 0; animation: 30s slidy infinite;
-}
-figure.slider figure {
-    width: 20%; height: auto;
-    display: inline-block;  position: inherit;
-}
-figure.slider img { width: 100%; height: auto; }
-figure.slider figure figcaption {
-    position: absolute; bottom: 0;
-    background: rgba(0,0,0,0.4);
-    color: #fff; width: 100%;
-    font-size: 2rem; padding: .6rem;
-}
 
+/* ici commence css de  l'animation Javascript*/
 
-
-
-/* Pour les tablettes
-
-body {
-    background: #eee;
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
+    margin:0;
+    padding:0;
 }
-
-.flexslider {
-    width: 790px;
-    margin: 0 auto;
-    box-shadow: none;
+html,body {
+    margin:0;
+    padding:0;
 }
-
-.flexslider li {
-    position: relative;
+table {
+    border-collapse:collapse;
+    border-spacing:0;
 }
-
-.flexslider li .meta {
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    font-family: 'Roboto', sans-serif;
+fieldset,img {
+    border:0;
 }
-
-.flexslider li h1 {
-    background: rgba(51, 51, 51, 0.5);
-    padding: 12px 18px 12px;
-    margin-bottom: 0;
-    font-size: 1.8em;
-    font-weight: 300;
+input{
+    border:1px solid #b0b0b0;
+    padding:3px 5px 4px;
+    color:#979797;
+    width:190px;
 }
-
-.flexslider li h2 {
-    background: rgba(51, 51, 51, 0.5);
-    padding: 13px 18px 11px;
-    font-size: 1.1em;
-    margin-bottom: 0;
-    font-weight: 300;
+address,caption,cite,code,dfn,th,var {
+    font-style:normal;
+    font-weight:normal;
 }
-
-.flexslider li .category {
-    display: flex;
-    flex-direction: row;
+ol,ul {
+    list-style:none;
 }
-
-.flexslider li .category p {
-    background: #e43837;
-    margin-right: 7px;
-    font-size: 1.1em;
-    padding: 12px 18px 10px;
-    font-weight: 300;
+caption,th {
+    text-align:left;
 }
-
-.flexslider li .category span {
-    background: #e43837;
-    margin-top: 17px;
-    padding: 8px 12px 0;
-    font-size: 0.9em;
-    font-weight: 300;
-    height: 26px;
+h1,h2,h3,h4,h5,h6 {
+    font-size:100%;
+    font-weight:normal;
 }
-
-.flexslider li h1,
-.flexslider li h2,
-.flexslider li .category p,
-.flexslider li .category span {
-    -webkit-animation-duration: .6s;
-    animation-duration: .6s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-name: fadeOutLeft;
-    animation-name: fadeOutLeft;
+q:before,q:after {
+    content:'';
 }
-
-.flexslider li.flex-active-slide .meta h1,
-.flexslider li.flex-active-slide .meta h2,
-.flexslider li.flex-active-slide .meta .category p,
-.flexslider li.flex-active-slide .meta .category span {
-    -webkit-animation-delay: .4s;
-    animation-delay: .4s;
-    -webkit-animation-duration: .6s;
-    animation-duration: .6s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-name: fadeInLeft;
-    animation-name: fadeInLeft;
+abbr,acronym { border:0;
 }
-
-.flexslider li.flex-active-slide .meta h2 {
-    -webkit-animation-delay: .5s;
-    animation-delay: .5s;
+/* General Demo Style */
+body{
+    font-family: "helvetica neue", helvetica;
+    background: #000;
+    font-weight: 400;
+    font-size: 15px;
+    color: #aa3e03;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
-
-.flexslider li.flex-active-slide .meta .category p {
-    -webkit-animation-delay: .6s;
-    animation-delay: .6s;
+.ie7 body{
+    overflow:hidden;
 }
-
-.flexslider li.flex-active-slide .meta .category span {
-    -webkit-animation-delay: .8s;
-    animation-delay: .8s;
-}
-
-.flex-direction-nav {
-    position: absolute;
-    top: 0;
-    left: 30px;
-}
-
-.flex-direction-nav a {
+a{
+    color: #333;
     text-decoration: none;
+}
+.container{
+    position: relative;
+    text-align: center;
+}
+.clr{
+    clear: both;
+}
+.container > header{
+    padding: 30px 30px 10px 20px;
+    margin: 0px 20px 10px 20px;
+    position: relative;
     display: block;
-    width: 30px;
-    height: 30px;
-    background-color: #333;
-    margin: -20px 0 0;
-    position: absolute;
-    top: 50px;
-    z-index: 10;
-    overflow: hidden;
-    opacity: .5;
-    cursor: pointer;
-    color: #fff;
-    -webkit-transition: all .3s ease;
-    -moz-transition: all .3s ease;
-    transition: all .3s ease;
-}
-
-.flex-direction-nav .flex-prev {
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
     text-align: left;
-    left: -10px;
+}
+.container > header h1{
+    font-family: "helvetica neue", helvetica;
+    font-size: 35px;
+    line-height: 35px;
+    position: relative;
+    font-weight: 400;
+    color: #fff;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+    padding: 0px 0px 5px 0px;
+}
+.container > header h1 span{
+
+}
+.container > header h2, p.info{
+    font-size: 16px;
+    font-style: italic;
+    color: #f8f8f8;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
 }
 
-.flex-direction-nav .flex-next {
-    text-align: right;
-    left: 30px;
+.slideshow,
+.slideshow:after {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 0;
 }
-
-.flexslider:hover .flex-prev {
-    left: -10px;
+.slideshow:after {
+    content: '';
+    background: transparent url(../images/pattern.png) no-repeat top left;
 }
-
-.flexslider:hover .flex-next {
-    left: 30px;
+.slideshow li span {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    color: transparent;
+    background-size: cover;
+    background-position: 50% 50%;
+    background-repeat: none;
+    opacity: 0;
+    z-index: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-animation: imageAnimation 36s linear infinite 0s;
+    -moz-animation: imageAnimation 36s linear infinite 0s;
+    -o-animation: imageAnimation 36s linear infinite 0s;
+    -ms-animation: imageAnimation 36s linear infinite 0s;
+    animation: imageAnimation 36s linear infinite 0s;
 }
-
-.flexslider:hover .flex-next:hover,
-.flexslider:hover .flex-prev:hover {
+.slideshow li div {
+    z-index: 1000;
+    position: absolute;
+    bottom: 30px;
+    left: 0px;
+    width: 100%;
+    text-align: center;
+    opacity: 0;
+    -webkit-animation: titleAnimation 36s linear infinite 0s;
+    -moz-animation: titleAnimation 36s linear infinite 0s;
+    -o-animation: titleAnimation 36s linear infinite 0s;
+    -ms-animation: titleAnimation 36s linear infinite 0s;
+    animation: titleAnimation 36s linear infinite 0s;
+}
+.slideshow li div h3 {
+    font-family: "helvetica neue", helvetica;
+    text-transform: uppercase;
+    font-size: 80px;
+    padding: 0;
+    line-height: 200px;
+    color: rgba(255,255,255, 0.8);
+}
+.slideshow li:nth-child(1) span { background-image: url("../img/rite-admission-diocese-kpalime.jpg") }
+.slideshow li:nth-child(2) span {
+    background-image: url("../img/seminariste.jpg");
+    -webkit-animation-delay: 6s;
+    -moz-animation-delay: 6s;
+    -o-animation-delay: 6s;
+    -ms-animation-delay: 6s;
+    animation-delay: 6s;
+}
+.slideshow li:nth-child(3) span {
+    background-image: url("../img/diacres.png");
+    -webkit-animation-delay: 12s;
+    -moz-animation-delay: 12s;
+    -o-animation-delay: 12s;
+    -ms-animation-delay: 12s;
+    animation-delay: 12s;
+}
+.slideshow li:nth-child(4) span {
+    background-image: url(https://24.media.tumblr.com/0df0b55a4615378cf593241bad80a7da/tumblr_n0hpwpZrVc1st5lhmo1_1280.jpg);
+    -webkit-animation-delay: 18s;
+    -moz-animation-delay: 18s;
+    -o-animation-delay: 18s;
+    -ms-animation-delay: 18s;
+    animation-delay: 18s;
+}
+.slideshow li:nth-child(5) span {
+    background-image: url(https://24.media.tumblr.com/b94dbb2a392198d5cc39c19959598229/tumblr_n0hpthN8VH1st5lhmo1_1280.jpg);
+    -webkit-animation-delay: 24s;
+    -moz-animation-delay: 24s;
+    -o-animation-delay: 24s;
+    -ms-animation-delay: 24s;
+    animation-delay: 24s;
+}
+.slideshow li:nth-child(6) span {
+    background-image: url(https://31.media.tumblr.com/67d222ee577fc35faca83f0e08efc48e/tumblr_mzzqt7wyEU1st5lhmo1_1280.jpg);
+    -webkit-animation-delay: 30s;
+    -moz-animation-delay: 30s;
+    -o-animation-delay: 30s;
+    -ms-animation-delay: 30s;
+    animation-delay: 30s;
+}
+.slideshow li:nth-child(2) div {
+    -webkit-animation-delay: 6s;
+    -moz-animation-delay: 6s;
+    -o-animation-delay: 6s;
+    -ms-animation-delay: 6s;
+    animation-delay: 6s;
+}
+.slideshow li:nth-child(3) div {
+    -webkit-animation-delay: 12s;
+    -moz-animation-delay: 12s;
+    -o-animation-delay: 12s;
+    -ms-animation-delay: 12s;
+    animation-delay: 12s;
+}
+.slideshow li:nth-child(4) div {
+    -webkit-animation-delay: 18s;
+    -moz-animation-delay: 18s;
+    -o-animation-delay: 18s;
+    -ms-animation-delay: 18s;
+    animation-delay: 18s;
+}
+.slideshow li:nth-child(5) div {
+    -webkit-animation-delay: 24s;
+    -moz-animation-delay: 24s;
+    -o-animation-delay: 24s;
+    -ms-animation-delay: 24s;
+    animation-delay: 24s;
+}
+.slideshow li:nth-child(6) div {
+    -webkit-animation-delay: 30s;
+    -moz-animation-delay: 30s;
+    -o-animation-delay: 30s;
+    -ms-animation-delay: 30s;
+    animation-delay: 30s;
+}
+/* Animation for the slideshow images */
+@-webkit-keyframes imageAnimation {
+    0% {
+        opacity: 0;
+        -webkit-animation-timing-function: ease-in;
+    }
+    8% {
+        opacity: 1;
+        -webkit-transform: scale(1.05);
+        -webkit-animation-timing-function: ease-out;
+    }
+    17% {
+        opacity: 1;
+        -webkit-transform: scale(1.1);
+    }
+    25% {
+        opacity: 0;
+        -webkit-transform: scale(1.1);
+    }
+    100% { opacity: 0 }
+}
+@-moz-keyframes imageAnimation {
+    0% {
+        opacity: 0;
+        -moz-animation-timing-function: ease-in;
+    }
+    8% {
+        opacity: 1;
+        -moz-transform: scale(1.05);
+        -moz-animation-timing-function: ease-out;
+    }
+    17% {
+        opacity: 1;
+        -moz-transform: scale(1.1);
+    }
+    25% {
+        opacity: 0;
+        -moz-transform: scale(1.1);
+    }
+    100% { opacity: 0 }
+}
+@-o-keyframes imageAnimation {
+    0% {
+        opacity: 0;
+        -o-animation-timing-function: ease-in;
+    }
+    8% {
+        opacity: 1;
+        -o-transform: scale(1.05);
+        -o-animation-timing-function: ease-out;
+    }
+    17% {
+        opacity: 1;
+        -o-transform: scale(1.1);
+    }
+    25% {
+        opacity: 0;
+        -o-transform: scale(1.1);
+    }
+    100% { opacity: 0 }
+}
+@-ms-keyframes imageAnimation {
+    0% {
+        opacity: 0;
+        -ms-animation-timing-function: ease-in;
+    }
+    8% {
+        opacity: 1;
+        -ms-transform: scale(1.05);
+        -ms-animation-timing-function: ease-out;
+    }
+    17% {
+        opacity: 1;
+        -ms-transform: scale(1.1);
+    }
+    25% {
+        opacity: 0;
+        -ms-transform: scale(1.1);
+    }
+    100% { opacity: 0 }
+}
+@keyframes imageAnimation {
+    0% {
+        opacity: 0;
+        animation-timing-function: ease-in;
+    }
+    8% {
+        opacity: 1;
+        transform: scale(1.05);
+        animation-timing-function: ease-out;
+    }
+    17% {
+        opacity: 1;
+        transform: scale(1.1);
+    }
+    25% {
+        opacity: 0;
+        transform: scale(1.1);
+    }
+    100% { opacity: 0 }
+}
+/* Animation for the title */
+@-webkit-keyframes titleAnimation {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(200px);
+    }
+    8% {
+        opacity: 1;
+        -webkit-transform: translateY(0px);
+    }
+    17% {
+        opacity: 1;
+        -webkit-transform: scale(1);
+    }
+    19% { opacity: 0 }
+    25% {
+        opacity: 0;
+        -webkit-transform: scale(10);
+    }
+    100% { opacity: 0 }
+}
+@-moz-keyframes titleAnimation {
+    0% {
+        opacity: 0;
+        -moz-transform: translateY(200px);
+    }
+    8% {
+        opacity: 1;
+        -moz-transform: translateY(0px);
+    }
+    17% {
+        opacity: 1;
+        -moz-transform: scale(1);
+    }
+    19% { opacity: 0 }
+    25% {
+        opacity: 0;
+        -moz-transform: scale(10);
+    }
+    100% { opacity: 0 }
+}
+@-o-keyframes titleAnimation {
+    0% {
+        opacity: 0;
+        -o-transform: translateY(200px);
+    }
+    8% {
+        opacity: 1;
+        -o-transform: translateY(0px);
+    }
+    17% {
+        opacity: 1;
+        -o-transform: scale(1);
+    }
+    19% { opacity: 0 }
+    25% {
+        opacity: 0;
+        -o-transform: scale(10);
+    }
+    100% { opacity: 0 }
+}
+@-ms-keyframes titleAnimation {
+    0% {
+        opacity: 0;
+        -ms-transform: translateY(200px);
+    }
+    8% {
+        opacity: 1;
+        -ms-transform: translateY(0px);
+    }
+    17% {
+        opacity: 1;
+        -ms-transform: scale(1);
+    }
+    19% { opacity: 0 }
+    25% {
+        opacity: 0;
+        -webkit-transform: scale(10);
+    }
+    100% { opacity: 0 }
+}
+@keyframes titleAnimation {
+    0% {
+        opacity: 0;
+        transform: translateY(200px);
+    }
+    8% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    17% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    19% { opacity: 0 }
+    25% {
+        opacity: 0;
+        transform: scale(10);
+    }
+    100% { opacity: 0 }
+}
+/* Show at least something when animations not supported */
+.no-cssanimations .slideshow li span{
     opacity: 1;
 }
-
-.flex-direction-nav a:before {
-    font-family: FontAwesome;
-    content: '\f104';
-    font-size: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    top: 0;
-    padding: 2px;
-    font-size: 19px;
-    line-height: 27px;
+@media screen and (max-width: 1140px) {
+    .slideshow li div h3 { font-size: 100px }
 }
-
-.flex-direction-nav a.flex-next:before {
-    content: '\f105';
+@media screen and (max-width: 600px) {
+    .slideshow li div h3 { font-size: 50px }
 }
-
-@-webkit-keyframes fadeInLeft {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: none;
-        transform: none;
-    }
-}
-
-@keyframes fadeInLeft {
-    0% {
-        opacity: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform: none;
-        transform: none;
-    }
-}
-
-@-webkit-keyframes fadeOutLeft {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-}
-
-@keyframes fadeOutLeft {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-        -webkit-transform: translate3d(-100%, 0, 0);
-        transform: translate3d(-100%, 0, 0);
-    }
-}
-*/
